--- a/t.css
+++ b/t.css
@@ -9,6 +9,7 @@ section {
     min-height: 100vh;
     width: 100%;
     transform: scale(1);
+
 }
 
 body {
@@ -18,25 +19,31 @@ body {
 .home {
     display: none;
     min-height: 100vh;
+
 }
 
 .about {
     display: none;
     color: grey;
+
 }
 
 .porfolio {
     display: none;
+
 }
 
 .blogs {
     display: none;
     color: blue;
     margin: 2rem;
+
+
 }
 
 .contacts {
     display: none;
+
 }
 
 .active {
@@ -69,6 +76,7 @@ body {
     }
 
     .ct {
+
         padding: 1rem;
         cursor: pointer;
         width: 50px;
@@ -132,6 +140,7 @@ body {
             box-shadow: 1px 4px 15px hsla(140, 94%, 27%, 0.322);
         }
     }
+
 }
 
 .active-btn {
@@ -140,6 +149,8 @@ body {
     h3 {
         color: rgb(20, 27, 34) !important;
     }
+
+
 }
 
 .right-content {
@@ -156,6 +167,7 @@ body {
         font-weight: 700;
         font-size: 4rem;
         margin-bottom: 7rem;
+
     }
 
     p {
@@ -188,12 +200,14 @@ body {
             border-radius: 50%;
             background-color: rgb(56, 59, 240);
             align-content: center;
+
         }
     }
 
     .nop {
         font-size: .9rem;
     }
+
 }
 
 h1 {
@@ -251,6 +265,7 @@ h1 {
         line-height: 1.5cm;
         margin: 2rem;
         margin-bottom: 4rem;
+
     }
 
     h2 {
@@ -289,6 +304,7 @@ h1 {
         color: rgb(72, 72, 153);
         font-size: 1.3rem;
         font-weight: 800;
+
     }
 
     p {
@@ -375,6 +391,7 @@ h1 {
             width: 20%;
             height: 5px;
             border-radius: 2px;
+
         }
 
         .p {
@@ -501,6 +518,7 @@ textarea:focus {
     padding: 0;
     margin-bottom: 7rem;
 
+
     p {
         color: white;
         display: inline;
@@ -516,6 +534,8 @@ textarea:focus {
             margin-top: 10rem;
         }
     }
+
+
 }
 
 .pss {
@@ -541,6 +561,7 @@ textarea:focus {
                 box-shadow: 1px 4px 15px hsla(140, 94%, 27%, 0.322);
             }
         }
+
     }
 }
 
@@ -584,8 +605,11 @@ h1 {
                 box-shadow: 15px 15px 15px hsla(140, 90%, 46%, 0.322);
                 transition: all .4s ease-in-out;
             }
+
         }
+
     }
+
 }
 
 #theme-btn {
@@ -633,10 +657,12 @@ h1 {
         color: white;
         line-height: 1cm;
     }
+
 }
 
 .agile {
     display: block;
+
 }
 
 #exit {
@@ -678,6 +704,7 @@ h1 {
         margin-right: 3px;
         cursor: pointer;
         margin-left: 4px;
+
     }
 
     #green {
@@ -697,6 +724,7 @@ h1 {
         margin-right: 4px;
         cursor: pointer;
     }
+
 }
 
 .blue {
@@ -898,6 +926,7 @@ li::before {
             font-weight: 800;
         }
     }
+
 }
 
 .experience::before {
@@ -909,316 +938,12 @@ li::before {
     left: 54.55%;
 }
 
-/* Media Queries */
-
-/* Large screens (1200px and above) */
-@media only screen and (min-width: 1200px) {
-    /* Your existing styles work well for large screens */
-}
-
-/* Medium screens (992px to 1199px) */
-@media only screen and (max-width: 1199px) {
-    .right-content {
-        width: 50%;
-        margin-right: 20rem;
-        margin-left: 36rem;
-    }
-
-    .image {
-        width: 400px;
-        height: 600px;
-        left: 10%;
-    }
-
-    .left-about {
-        left: 30%;
-    }
-
-    .education,
-    .experience {
-        width: 450px;
-        margin-left: 6rem;
-    }
-}
-
-/* Small screens (768px to 991px) */
-@media only screen and (max-width: 991px) {
-    .right-content {
-        width: 60%;
-        margin-right: 15rem;
-        margin-left: 30rem;
-        margin-top: 4rem;
-
-        span {
-            font-size: 3rem;
-        }
-
-        p {
-            font-size: 1.5rem;
-        }
-    }
-
-    .image {
-        width: 350px;
-        height: 500px;
-        left: 8%;
-    }
-
-    .h-shape {
-        width: 50%;
-        clip-path: polygon(0 0, 40% 0, 70% 100%, 0% 100%);
-    }
-
-    .left-about {
-        left: 25%;
-        width: 200px;
-    }
-
-    .right-about h2 {
-        font-size: 5rem;
-
-        .bg-txt {
-            font-size: 2rem;
-            left: 35%;
-        }
-    }
-
-    .info {
-        width: 40%;
-    }
-
-    .education,
-    .experience {
-        width: 350px;
-        margin-left: 4rem;
-    }
-
-    .message {
-        margin-left: 30rem;
-    }
-
-    .bloog {
-        grid-template-columns: 1fr;
-    }
-}
-
-/* Extra small screens (576px to 767px) */
-@media only screen and (max-width: 767px) {
-    .right-content {
-        width: 80%;
-        margin: 2rem auto;
-        padding: 1rem;
-        text-align: center;
-
-        span {
-            font-size: 2.5rem;
-            margin-bottom: 3rem;
-        }
-
-        p {
-            font-size: 1.2rem;
-            line-height: 1.5cm;
-        }
-    }
-
-    .image {
-        position: relative;
-        width: 300px;
-        height: 400px;
-        left: 50%;
-        transform: translateX(-50%);
-        top: 0;
-        margin-top: 2rem;
-    }
-
-    .h-shape {
-        display: none;
-    }
-
-    .left-about {
-        position: relative;
-        grid-template-columns: 1fr;
-        width: 80%;
-        left: 10%;
-        top: 0;
-        margin-top: 2rem;
-    }
-
-    .right-about {
-        h2 {
-            font-size: 3rem;
-
-            .bg-txt {
-                font-size: 1.5rem;
-                left: 30%;
-                top: 15%;
-            }
-        }
-    }
-
-    .info {
-        width: 80%;
-        margin: 1rem auto;
-    }
-
-    .hire {
-        flex-direction: column;
-        margin-top: 5rem;
-
-        .cv,
-        .me {
-            margin: 1rem 0;
-        }
-    }
-
-    .BAR {
-        grid-template-columns: 1fr;
-    }
-
-    .adds {
-        flex-direction: column;
-    }
-
-    .education,
-    .experience {
-        width: 90%;
-        margin: 2rem auto;
-        padding: 1rem;
-
-        &::before {
-            display: none;
-        }
-    }
-
-    li::before {
-        display: none;
-    }
-
-    .message {
-        margin: 2rem auto;
-        width: 80%;
-    }
-
-    .pss {
-        flex-direction: column;
-    }
-
-    .controlls {
-        width: 100%;
-        height: auto;
-        position: relative;
-        padding: 1rem;
-
-        .ct h3 {
-            position: static;
-            margin-left: 1rem;
-        }
-    }
-
-    #manipulate,
-    #theme-btn,
-    #colors {
-        position: static;
-        margin: 0.5rem auto;
-    }
-
-    #exit {
-        left: 80%;
-    }
-}
-
-/* Extra extra small screens (below 576px) */
-@media only screen and (max-width: 575px) {
-    .right-content {
-        width: 95%;
-
-        span {
-            font-size: 2rem;
-        }
-
-        p {
-            font-size: 1rem;
-        }
-    }
-
-    .image {
-        width: 250px;
-        height: 350px;
-    }
-
-    .right-about h2 {
-        font-size: 2.5rem;
-
-        .bg-txt {
-            font-size: 1.2rem;
-        }
-    }
-
-    .info {
-        width: 95%;
-    }
-
-    .education,
-    .experience {
-        width: 95%;
-    }
-
-    .message {
-        width: 95%;
-
-        input,
-        textarea {
-            width: 100%;
-        }
-    }
-
-    .port p {
-        display: block;
-        margin: 1rem 0;
-    }
-
-    .controlls .ct {
-        margin: 1rem 0;
-    }
-}
-
-/* Orientation-specific adjustments */
-@media screen and (orientation: landscape) and (max-height: 500px) {
-    .right-content {
-        margin-top: 1rem;
-
-        span {
-            font-size: 2rem;
-            margin-bottom: 1rem;
-        }
-
-        p {
-            font-size: 1rem;
-            line-height: 1cm;
-        }
-    }
-
-    .image {
-        height: 300px;
-        width: 250px;
-        top: 50%;
-    }
-
-    .left-about {
-        top: 2%;
-    }
-
-    .hire {
-        margin-top: 5rem;
-    }
-}
-
-/* High DPI screens */
-@media (-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dpi) {
-
-    /* Adjustments for high DPI screens */
-    body {
-        -webkit-font-smoothing: antialiased;
-    }
+li::before {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background-color: blue;
+    position: absolute;
+    content: "";
+    left: -14.5%;
 }
