--- a/index.css
+++ b/index.css
@@ -959,34 +959,43 @@ li::before {
 
     .controlls {
         height: 100vh;
-        width: 100%;
+        width: 45%;
         padding: 2rem;
         position: fixed;
-        display: none;
+        
     }
 
     .h-shape {
         width: 100%;
         height: auto;
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+        display: none;
     }
 
     .image {
         position: relative;
-        height: 400px;
-        width: 100%;
+        height: 300px;
+        width: 300px;
         top: 0;
         left: 0;
-        margin: 0 auto;
+        margin-top: 18rem;
+        margin-bottom: 0;
+        margin-left: 3rem;
     }
 
     .right-content {
-        width: 90%;
-        margin: 0 auto;
-        margin-top: 4rem;
-        padding: 1.5rem;
-        font-weight: 400;
+        width: 100%;
+        margin:0 ;
+        padding: 1rem;
+        font-weight: 350;
         text-align: center;
+        h1{
+            margin-top:0;
+            span{
+                font-size:4rem;
+            }
+        }
+
     }
 
     .left-about {
@@ -1019,6 +1028,7 @@ li::before {
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-top: 10rem;
     }
 
     .cv,
