--- a/index.css
+++ b/index.css
@@ -974,7 +974,7 @@ li::before {
 
     .image {
         position: relative;
-        height: 300px;
+        height: 320px;
         width: 300px;
         top: 0;
         left: 0;
@@ -986,27 +986,32 @@ li::before {
     .right-content {
         width: 100%;
         margin:0 ;
+        margin-top: 0;
         padding: 1rem;
         font-weight: 350;
         text-align: center;
         h1{
             margin-top:0;
+            line-height: 1cm;
+            
             span{
-                font-size:4rem;
+                font-size:3rem;
+                margin-top: 0;
             }
         }
 
     }
 
     .left-about {
-        position: relative;
-        top: 0;
+        top: 1200px;
         left: 0;
         padding: 1rem;
         height: auto;
-        width: 100%;
+        width: auto;
+        display: flex;
+        flex-direction: column;
+        
     }
-
     .socials {
         display: flex;
         flex-direction: column;
@@ -1016,11 +1021,13 @@ li::before {
         cursor: pointer;
         padding: 1rem;
     }
-
+    .bg-txt{
+        display: none;
+    }
     .info {
-        width: 80%;
+        width: 100%;
         margin: 2rem auto;
-        padding: 2rem;
+        padding: 0rem;
     }
 
     .hire {
@@ -1028,7 +1035,7 @@ li::before {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 10rem;
+        margin-top: 35rem;
     }
 
     .cv,
@@ -1041,7 +1048,7 @@ li::before {
 
     .education,
     .experience {
-        width: 100%;
+        width: 50%;
         margin-left: 0;
     }
 
@@ -1055,18 +1062,22 @@ li::before {
 
     .bloog {
         grid-template-columns: 1fr;
+        width: 100%;
+        height: auto;
+        margin-left: 0;
+        padding: auto;
     }
 
     #theme-btn {
-        top: 3%;
-        right: 3%;
+        top: 0%;
+        right: 0%;
         width: 50px;
         height: 35px;
     }
 
     #manipulate {
-        left: 3%;
-        top: 3%;
+        left: 0%;
+        top: 0%;
         width: 50px;
         position: fixed;
         height: 35px;
