--- a/index.css
+++ b/index.css
@@ -959,9 +959,11 @@ li::before {
 
     .controlls {
         height: 100vh;
-        width: 45%;
-        padding: 2rem;
+        width: 60%;
+        padding: 1rem;
         position: fixed;
+        
+
         
     }
 
@@ -973,12 +975,11 @@ li::before {
     }
 
     .image {
-        position: relative;
-        height: 320px;
+        height: 350px;
         width: 300px;
         top: 0;
         left: 0;
-        margin-top: 18rem;
+        margin-top: 14rem;
         margin-bottom: 0;
         margin-left: 3rem;
     }
@@ -986,7 +987,7 @@ li::before {
     .right-content {
         width: 100%;
         margin:0 ;
-        margin-top: 0;
+        margin-top: 19rem;
         padding: 1rem;
         font-weight: 350;
         text-align: center;
@@ -995,7 +996,7 @@ li::before {
             line-height: 1cm;
             
             span{
-                font-size:3rem;
+                font-size:2.9rem;
                 margin-top: 0;
             }
         }
@@ -1072,15 +1073,19 @@ li::before {
         top: 0%;
         right: 0%;
         width: 50px;
-        height: 35px;
+        height: 30px;
+        position: fixed;
     }
 
     #manipulate {
         left: 0%;
-        top: 0%;
+        top: 0.5%;
         width: 50px;
         position: fixed;
-        height: 35px;
+        height: 31px;
+        i{
+            font-size: 1.5rem;
+        }
     }
 
     #colors {
